--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -428,6 +428,7 @@ th {
 
 /* LAYOUT STYLES */
 /*What color is body-bg.jpg in a comment.*/
+/*The color is white.*/
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 15px;
